feat: add register router
