# src/dtos/auth/response/token.dto.ts
@@ -1,0 +1,10 @@
+import { Exclude, Expose } from "class-transformer";
+
+@Exclude()
+export class TokenDto {
+  @Expose()
+  readonly token!: string;
+
+  @Expose()
+  readonly expiration!: number;
+}
